Z-index fix in navbar, popup and popover. - Popover goes over navbar and popup.

--- a/src/assets/less/weed/navbar.less
+++ b/src/assets/less/weed/navbar.less
@@ -32,7 +32,7 @@
 @navbar-search-submit-width:                                30px;
 @navbar-search-width:                                       400px;
 @navbar-separator-occupancy:                                0.6;
-@navbar-z-index:                                            @z-maximum - 11;
+@navbar-z-index:                                            @z-maximum - 21;
 
 @navbar-isotype-last-position:                              @sidebar-isotype-last-position;
 @navbar-isotype-start-position:                             @sidebar-isotype-start-position;
