--- a/src/assets/less/weed/popover.less
+++ b/src/assets/less/weed/popover.less
@@ -38,7 +38,7 @@
 @popover-info-padding-vertical:                               24px;
 @popover-info-padding-horizontal:                             14px;
 
-@popover-z-index:                                             1060;
+@popover-z-index:                                             @z-maximum;
 
 
 // Configuration
